2002-11-24  Jody Goldberg <jody@gnome.org>

	* src/xml-io.c (gnumeric_xml_read_workbook) : Use the new parser.

2002-11-22  Jody Goldberg <jody@gnome.org>

	* src/sheet-control-gui.c (scg_setup_group_buttons) : fix ungrouping.

2002-11-21  Jody Goldberg <jody@gnome.org>

	* src/colrow.c (colrow_get_global_outline) : new.

	* src/commands.c (cmd_colrow_hide_correct_selection) : just in case,
	  don't reset the selection unless we are going to set it to something.
	(cmd_colrow_hide_undo) : convert from elements+flag -> 2 lists.
	(cmd_colrow_hide_redo) : ditto.
	(cmd_colrow_hide_finalize) : ditto.
	(cmd_selection_colrow_hide) : ditto.
	(cmd_selection_outline_change) : ditto.
	(cmd_global_outline_change) : new.

2002-11-20  Jody Goldberg <jody@gnome.org>

	* src/sheet-control-gui.c (scg_setup_group_buttons) : hook up the
	  outline buttons to a callback.
	(cb_outline_button) : new.

2002-11-10  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* acinclude.m4: Updated included lcmessage.m4.

2002-11-10  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* configure.in: Reenabled AM_ACLOCAL_INCLUDE.

2002-11-09  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(EXTRA_DIST): Add config.rpath mkinstalldirs.
	* configure.in (AC_OUTPUT): Add po/Makefile.in,

2002-11-09  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* configure.in: define GETTEXT_PACKAGE; added AC_PROG_INTLTOOL; dropped
	AM_ACLOCAL_INCLUDE; declared INSIDE_GNOME_COMMON.
	* Makefile.am: export GETTEXT_PACKAGE for po/Makefile.

2002-11-09  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Remove intl.
	* Makefile.am (SUBDIRS): Add m4.
	(EXTRA_DIST): Add config.rpath mkinstalldirs.
	* configure.in (AC_OUTPUT): Add po/Makefile.in,

2002-11-08  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* configure.in: Make newer automake happy:
	  * Dropped AC_ARG_PROGRAM as AM_INIT_AUTOMAKE already does
	    it for us.
	  * Reworked Guile handling.
	  * Removed src/Makefile and intl/Makefile from AC_OUTPUT