@@ -3356,6 +3356,7 @@ gnumeric_xml_read_workbook (GnumFileOpener const *fo,
 	xmlNsPtr gmr;
 	XmlParseContext *ctxt;
 	GnumericXMLVersion    version;
+	gboolean xml_parser_flag;
 
 	g_return_if_fail (filename != NULL);
 
@@ -3388,11 +3389,15 @@ gnumeric_xml_read_workbook (GnumFileOpener const *fo,
 	value_io_progress_set (context, file_size, 0);
 	bytes = gzread (f, buffer, 4);
 	pctxt = xmlCreatePushParserCtxt (NULL, NULL, buffer, bytes, filename);
+
+	xml_parser_flag = xmlUseNewParser (TRUE);
 	while ((bytes = gzread (f, buffer, XML_INPUT_BUFFER_SIZE)) > 0) {
 		xmlParseChunk (pctxt, buffer, bytes, 0);
 		value_io_progress_update (context, lseek (fd, 0, SEEK_CUR));
 	}
 	xmlParseChunk (pctxt, buffer, 0, 1);
+	xmlUseNewParser (xml_parser_flag);
+
 	res = pctxt->myDoc;
 	xmlFreeParserCtxt (pctxt);
 	gzclose (f);
